profilelist1exp/unpackaged/objects/OTM_History__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_ACCNT_ID__c</fullName>
        <label>OTM ACCOUNT ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_Access__c</fullName>
        <label>OTM Access</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_Accnt_Name__c</fullName>
        <label>OTM Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_Accnt_Owner__c</fullName>
        <label>OTM Account Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_Created_By__c</fullName>
        <label>OTM Created By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_Date__c</fullName>
        <label>OTM Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTM_OPPTY_ID__c</fullName>
        <label>OTM OPPORTUNITY ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_Oppty_Name__c</fullName>
        <label>OTM Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_Oppty_Owner__c</fullName>
        <label>OTM Opportunity Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_Removed_By__c</fullName>
        <label>OTM Removed By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_SFDC_ID__c</fullName>
        <externalId>true</externalId>
        <label>OTM SFDC ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_Sales_Channel_Name__c</fullName>
        <label>OTM Sales Channel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_Team_member_role__c</fullName>
        <label>OTM  Team member role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_User_Profile__c</fullName>
        <label>OTM User Profile</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_User_Role__c</fullName>
        <label>OTM User Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>OTM History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OTM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OTM History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>